--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{    font-family: 'Carrois Gothic SC', sans-serif;}
 .header{
     z-index: 100;
     display: flex;
+
     grid-area: header;
-    
     background-color: #171744;
 }
 .section{
@@ -26,11 +26,6 @@ body{    font-family: 'Carrois Gothic SC', sans-serif;}
     justify-content: center;
     grid-area: main;
     background-color: #e7e5e5d2;
-}
-.article{
-    
-    height: 100vh;
-    grid-area: article;
 }
 .footer{
     align-items: center;
@@ -57,6 +52,7 @@ body{    font-family: 'Carrois Gothic SC', sans-serif;}
     width: 100%;
     font-family: 'Carrois Gothic SC', sans-serif;
     display: flex;
+    justify-content: space-around;
     list-style: none;
     font-size: 1.0rem;
     align-items: center;
@@ -208,3 +204,86 @@ input{
     height: 40px;
     margin-top: 15px;
 }
+/* Fim Grid chama */
+@media screen and (max-width: 768px){
+    .header_menu{
+    flex-direction: column;
+    align-items: center;
+    background-color: #171744;
+    padding-top: 30px;
+    position: relative;
+    z-index: 99;
+    }
+    .header_menu--itens{
+    margin-right: 0;
+    margin-bottom: 15px;
+    }
+    .header_menu--itens--a:hover::after {
+    content: none;
+    }
+    .header_menu--itens--a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.2rem;
+    padding: 5px;
+    }
+    .container_grid{
+    display: block;
+    height: auto;
+    }
+    
+    .section_caixa{
+    height: 500px;
+    }
+    .section-titulo{
+    top: 35%;
+    }
+    .main {
+        height: auto;
+        padding-bottom: 50px;
+      }
+      
+      .row {
+        flex-wrap: wrap;
+      }
+      
+      .card {
+        width: calc(100% - 30px);
+        margin: 15px;
+        height: 250px;
+      }
+    }
+    .footer{
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+    }
+    .footer_card{
+    width: 90%;
+    height: auto;
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    }
+    .footer_card p{
+    margin-bottom: 15px;
+    margin-top: 10px;
+    font-size: 14px;
+    }
+    .footer_card--logo {
+    height: 80px;
+    width: 80px;
+    }
+    .footer_card--ul {
+    margin-top: 30px;
+    }
+    .footer_card--ul_li{
+    margin: 5px;
+    width: 30px;
+    height: 30px;
+    margin-top: -10px;
+    }
+    
