--- a/style.css
+++ b/style.css
@@ -286,4 +286,22 @@ input{
     height: 30px;
     margin-top: -10px;
     }
-    
+    @media screen and (max-width: 1500px) {
+        .container_grid {
+          grid-template-rows: 0.1fr 80vh 80vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+        }
+        
+        .section_caixa {
+          height: 800px; /* ajuste a altura do parallax */
+        }
+        
+        .card {
+          width: calc(33.33% - 5px); /* ajuste a largura dos cartões */
+          height: 350px;
+        }
+        
+        .footer_card {
+          width: 25%; /* ajuste a largura do cartão do rodapé */
+          height: auto;
+        }
+      }
