--- a/style.css
+++ b/style.css
@@ -305,11 +305,11 @@ input{
     
     }
 }
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 1130px) {
         .container_grid {
-          grid-template-rows: 0.1fr 80vh 100vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+          grid-template-rows: 0.1fr 80vh 155vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
         }.main {
-            height: 102vh;
+            height: 155vh;
             overflow: none;
         }
         .card {
@@ -323,7 +323,7 @@ input{
             justify-content: center;
         }
     }
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 920px) {
     .main{
         height: 100vh;
     }
@@ -337,10 +337,10 @@ input{
     }
     @media screen and (max-width: 780px) {
         .main{
-            height: 380vh;
+            height: 330vh;
         }
         .container_grid {
-            grid-template-rows: 0.1fr 80vh 380vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+            grid-template-rows: 0.1fr 80vh 280vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
           } 
         .footer{
             height: 120vh;   
@@ -362,6 +362,55 @@ input{
           } 
           .footer{
             height: 140vh;   
+            width: 100%;
+        }
+    }
+    @media screen and (max-width: 413px) {
+        .main{
+            height: 386vh;
+        }
+        .container_grid {
+            grid-template-rows: 0.1fr 80vh 496vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+          } 
+          .footer{
+            height: 140vh;   
+            width: 100%;
+        }
+    }
+    
+    
+    @media screen and (max-width: 379px) {
+        .main{
+            height: 436vh;
+        }
+        .container_grid {
+            grid-template-rows: 0.1fr 80vh 438vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+          } 
+          .footer{
+            height: 140vh;   
+            width: 100%;
+        }
+    }
+    @media screen and (max-width: 369px) {
+        .main{
+            height: 456vh;
+        }
+        .container_grid {
+            grid-template-rows: 0.1fr 80vh 488vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+          } 
+          .footer{
+            height: 140vh;   
+            width: 100%;
+        }
+    }
+    @media screen and (max-width: 280px) {
+        .main{
+            height: 500vh;}
+        .container_grid {
+            grid-template-rows: 0.1fr 80vh 538vh; /* ajuste a altura das áreas do cabeçalho e do rodapé */
+          } 
+          .footer{
+            height: 150vh;   
             width: 100%;
         }
     }
